kubernetes-org/service_cookieflask.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookieflaskservicev2
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: cookieflaskv2
spec:
  type: LoadBalancer
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  - port: 5002
    targetPort: 5002
    protocol: TCP
    name: ui
  selector:
    run: cookieflaskv2
