kubernetes-org/ingress_cookieflask.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: milkbikis
spec:
  backend:
    serviceName: cookieflaskservice
    servicePort: 5001
